# AssisTrade

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
bot/: .env.example  Dockerfile  main.py  models.py
docs/: ml_system_design_doc.md
eda/: RAG.ipynb
rag/: README.md  main.py  requirements.txt
rag/src/parsing/: scrap_metamask.py
src/agents/: Dockerfile  env.example  main.py  pyproject.toml
src/agents/agent/: agents.py  prompts.py
src/agents/agents_framework/: agents.py  agents_card.py  agents_tool_card.py  prompts.py
src/agents/routes/: agents.py  transactions.py
src/agents/schemas/: models.py
src/agents/services/: agent_service.py  transaction_service.py
src/chat_history/: Dockerfile  chat_history.db  main.py  pyproject.toml
src/chat_history/db/: database.py
src/chat_history/routes/: chat_history.py
src/chat_history/schemas/: models.py
src/chat_history/services/: db_service.py
src/contact-service/: Dockerfile  docker-compose.yml  requirements.txt
src/contact-service/app/: main.py
src/rag/: .env.example  Dockerfile  README.md  assessment.json  calc_metrics.py  docker-compose.yaml  main.py  requirements.txt
src/rag/src/: __init__.py  chromadb_manager.py
src/rag/tests/: load_testing.py
src/rag/welding_index/: welding_index.py
src/transactions/: pyproject.toml
src/transactions/agent/: prompts.py  tx_agent.py
src/transactions/routes/: transactions.py
src/transactions/schemas/: transaction_schemas.py
transaction-mini-app/: Dockerfile  package-lock.json  package.json
(+17 files in other folders)
